[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dedupper"
authors = [{name = "Graham Wheeler"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "openai==1.57.4",
    "flit_core==3.9.0",
    "click==8.1.7",
    "scikit-learn==1.6.1",
    "requests==2.32.3",
]

classifiers = ["Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Source = "https://github.com/gramster/dedupper"

[project.scripts]
dedupper = "dedupper:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
